gui enhancement and addition of footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,32 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="{{ site.baseurl }}/scripts/dist/bundle.js"></script>
 
-<footer></footer>
+<footer class="site-footer">
+    <div class="row">
+        <div class="col-md-4 footer-links footer-left">
+            <ul class="list-unstyled">
+                <li><a class="logo" type="button" href="http://datascientia.eu/"><img
+                        src="img/data-scientia-white.png"></a></li>
+                <p class="footerAddress">Address:<br>
+                    <a href="http://knowdive.disi.unitn.it/wordpress/">Knowdive</a>, <a
+                            href="http://www.unitn.it/" target="_blank" rel="noopener noreferrer">University of
+                        Trento</a>,<br>
+                    38123 Povo, Trento, Italy</p>
+            </ul>
+        </div>
+        <div class="col-md-4 footer-center">
+            <ul class="list-unstyled">
+                <li><a href="http://datascientia.eu/manifesto/">Manifesto</a></li>
+                <li><a href="http://datascientia.eu/mission/">Mission</a></li>
+                <li><a href="http://datascientia.eu/events/">News</a></li>
+            </ul>
+        </div>
+        <div class="col-md-4 attribution footer-right">
+            <ul class="list-unstyled">
+                <li><a href="http://datascientia.eu/">Community</a></li>
+                <li><a href="http://datascientia.eu/it/become-a-partner/">Become a Partner</a></li>
+                <li><a href="http://datascientia.eu/contact-us/">Contact Us</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
