--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm mb-4 navbar-light bg-light" data-component="navigation">
+<nav class="navbar navbar-expand-sm mb-4 navbar-light" data-component="navigation">
   <div class="container">
   <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,6 +14,11 @@
           <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a></li>
           {% endif %}
         {% endfor %}
+        {% if page.url contains link.url %}
+        <li class="nav-item active"><a class="nav-link" href="http://datascientia.disi.unitn.it/">About Us <span class="sr-only">(current)</span></a></li>
+        {% else %}
+        <li class="nav-item"><a class="nav-link" href="http://datascientia.disi.unitn.it/">About Us</a></li>
+        {% endif %}
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link" href="#" data-hook="login-link">Login</a></li>
@@ -25,7 +30,7 @@
           </a>
           </ul>
       <div class = "dropdown-menu">
-            <a class="dropdown-item admin-only" data-hook="admin-link-list-item"" href="{{ site.baseurl }}/admin/">Administration</a>
+            <a class="dropdown-item admin-only" data-hook="admin-link-list-item" href="{{ site.baseurl }}/admin/">Administration</a>
             <a class="dropdown-item" href="#" data-hook="logout-link">Logout</a>
       </div>
 
