--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,165 @@
-.organization-thumbnail img {
-  width: 64px;
+
+/* Set the background of the page and remove the overflow*/
+body {
+  background: none #59abb3; /* website main background */
+  font-family: system-ui;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
 }
+
+footer {
+  margin-top: auto;
+}
+
+a {
+  color: #40505f;
+}
+
+a:hover {
+  color: #40505f;
+}
+
+.navbar {
+  background: #02828b;
+}
+
+h1, h2, h3 {
+  color: #40505f;
+}
+
+.jumbotron {
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: 1px solid #cccccc;
+  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
+  color: #40505f;
+}
+
+
+.btn-primary {
+  border-color: #02828b;
+  background-color: #02828b;
+}
+
+.btn-primary:hover {
+  border-color: #02828b;
+  background-color: #02828b;
+}
+
+.navbar-light .navbar-brand, .navbar-light .navbar-nav .nav-link{
+  color: white;
+}
+.breadcrumb {
+  background-color: transparent;
+}
+
+.breadcrumb-item.active {
+  color: #40505f;
+}
+
+/*dataset page*/
+
+.wrapper{
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
+  position: relative;
+  background-color: #fff;
+}
+
+.wrapper .media {
+  padding: 15px;
+}
+
+div[data-hook="datasets-items"] {
+  padding: 15px;
+  border-radius: 4px;
+  background: #f4f4f4db;
+  box-shadow: 0 0 0 2px rgb(0 0 0 / 2%);
+}
+
 
 dataset {
   display: block;
-  border-bottom: 1px #d6d6d6 solid;
   padding-bottom: 20px;
+}
+
+dataset h3 {
+  border-bottom: solid 3px #02828b;;
+}
+
+.badge-primary {
+  background-color: #40505f;
+}
+
+.list-group-item.active {
+  z-index: 2;
+  color: #fff;
+  background-color: #59abb3;
+  border-color: #59abb3;
+}
+
+.secondary {
+  padding-top: 15px;
+}
+
+.primary {
+  padding: 15px;
+}
+
+.primary h1 {
+  border-bottom: solid 3px #02828b;
+}
+
+.media-body h4 {
+  border-bottom: solid 3px #02828b;
+}
+
+/*admin page */
+.tab-pane {
+  padding-top: 15px;
+}
+
+/************************************************** Footer css***************************************************/
+.site-footer {
+  background: none #40505f; /*set the background color*/
+  color: white; /*set the text color*/
+}
+
+.site-footer .row {
+  padding-top: 20px;
+}
+
+.footer-left {
+  padding-left: 70px;
+}
+
+.footer-center {
+  padding: 35px 70px 25px 70px;
+}
+
+.footer-right {
+  padding: 25px 70px 25px 15px ;
+}
+
+.footer-left, .footer-center, .footer-right{
+  text-align: center;
+}
+
+
+.footer-left, img {
+  max-width: 40%;
+}
+
+.site-footer a {
+  color: white; /* set the color of the link*/
+}
+
+
+.organization-thumbnail img {
+  width: 64px;
 }
 
 .list-group-item-truncate {
