bug fix: fix of image url in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
         <div class="col-md-4 footer-links footer-left">
             <ul class="list-unstyled">
                 <li><a class="logo" type="button" href="http://datascientia.eu/"><img
-                        src="img/data-scientia-white.png"></a></li>
+                        src="{{ site.baseurl }}/img/data-scientia-white.png"></a></li>
                 <p class="footerAddress">Address:<br>
                     <a href="http://knowdive.disi.unitn.it/wordpress/">Knowdive</a>, <a
                             href="http://www.unitn.it/" target="_blank" rel="noopener noreferrer">University of
