--- a/_layouts/dataset.html
+++ b/_layouts/dataset.html
@@ -122,8 +122,8 @@ layout: default
             </div>
 
             <div data-hook="view" data-view="edit">
-                <div class="row">
-                    <div class="col-sm-8 offset-sm-2">
+                <div class="row wrapper">
+                    <div class="col-sm-12 primary">
                         {% include dataset-form.html dataset=page %}
                     </div>
                 </div>
