--- a/_layouts/organization.html
+++ b/_layouts/organization.html
@@ -32,8 +32,8 @@ layout: default
   </div>
 
   <div data-hook="view" data-view="edit">
-    <div class="row">
-      <div class="col-sm-8 offset-sm-2">
+    <div class="row wrapper">
+      <div class="col-sm-12 primary">
         {% include organization-form.html organization=page %}
       </div>
     </div>
