--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,25 @@
+<div class="account-masthead navbar">
+  <div class="container">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item"><a class="nav-link login-link" href="#" data-hook="login-link">Login</a></li>
+      <li class="nav-item dropdown d-none" data-hook="user-dropdown">
+        <a href="#" class="nav-link dropdown-toggle" data-hook="user-dropdown-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <span class="user-issue" data-hook="user-issue"><i class="fa fa-exclamation-circle"></i></span>
+          <span data-hook="user-name">User</span>
+          <span class="caret"></span>
+        </a>
+    </ul>
+    <div class = "dropdown-menu">
+      <a class="dropdown-item admin-only" data-hook="admin-link-list-item" href="{{ site.baseurl }}/admin/">Administration</a>
+      <a class="dropdown-item" href="#" data-hook="logout-link">Logout</a>
+    </div>
+  </div>
+</div>
 <nav class="navbar navbar-expand-sm mb-4 navbar-light" data-component="navigation">
   <div class="container">
-  <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="logo" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/img/data-scientia-white.png"></a>
+
+<!-- <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>   -->
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
   <span class="sr-only">Toggle navigation</span>
   <span class="navbar-toggler-icon"></span>
@@ -8,31 +27,15 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         {% for link in site.navigation %}
-          {% if page.url contains link.url %}
+          {% if link.title == "About Us" %}
+          <li class="nav-item"><a class="nav-link" href="{{ link.url }}" target="_blank">{{ link.title }}</a></li>
+          {% elsif page.url contains link.url %}
           <li class="nav-item active"><a class="nav-link" href="{{ site.baseurl }}{{ link.url }}">{{ link.title }} <span class="sr-only">(current)</span></a></li>
           {% else %}
           <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a></li>
           {% endif %}
         {% endfor %}
-        {% if page.url contains link.url %}
-        <li class="nav-item active"><a class="nav-link" href="http://datascientia.disi.unitn.it/">About Us <span class="sr-only">(current)</span></a></li>
-        {% else %}
-        <li class="nav-item"><a class="nav-link" href="http://datascientia.disi.unitn.it/">About Us</a></li>
-        {% endif %}
       </ul>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link" href="#" data-hook="login-link">Login</a></li>
-        <li class="nav-item dropdown d-none" data-hook="user-dropdown">
-          <a href="#" class="nav-link dropdown-toggle" data-hook="user-dropdown-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <span class="user-issue" data-hook="user-issue"><i class="fa fa-exclamation-circle"></i></span>
-            <span data-hook="user-name">User</span>
-            <span class="caret"></span>
-          </a>
-          </ul>
-      <div class = "dropdown-menu">
-            <a class="dropdown-item admin-only" data-hook="admin-link-list-item" href="{{ site.baseurl }}/admin/">Administration</a>
-            <a class="dropdown-item" href="#" data-hook="logout-link">Logout</a>
-      </div>
 
     </div>
 
