--- a/css/main.css
+++ b/css/main.css
@@ -48,9 +48,51 @@ h1, h2, h3 {
   background-color: #02828b;
 }
 
+/* Header css*/
+.account-masthead {
+  background-color: #40505f;
+}
+
+.login-link:hover {
+  color: white;
+}
+
+.navbar-nav .nav-link {
+  float: right;
+  color: white;
+  padding-right: .5rem;
+  padding-left: .5rem;
+}
+
+.logo img {
+  max-width: 60%;
+}
+
+
 .navbar-light .navbar-brand, .navbar-light .navbar-nav .nav-link{
   color: white;
 }
+
+@media (min-width: 576px) {
+  .navbar-expand-sm .navbar-collapse {
+    display: block !important;
+  }
+}
+
+.navbar-nav {
+  float: right;
+}
+
+.navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
+  color: white;
+}
+
+.navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover, .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+  color: white;
+}
+
+
+/* breadcrumb css*/
 .breadcrumb {
   background-color: transparent;
 }
@@ -149,7 +191,7 @@ dataset h3 {
 }
 
 
-.footer-left, img {
+.footer-left img {
   max-width: 40%;
 }
 
