--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 </div>
 <nav class="navbar navbar-expand-sm mb-4 navbar-light" data-component="navigation">
   <div class="container">
-    <a class="logo" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/img/data-scientia-white.png"></a>
+    <a class="logo" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}{{site.logo}}"></a>
 
 <!-- <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>   -->
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
