--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ a:hover {
 }
 
 .navbar {
-  background: #02828b;
+  background: white;
 }
 
 h1, h2, h3 {
@@ -30,20 +30,35 @@ h1, h2, h3 {
 }
 
 .jumbotron {
-  background-color: #ffffff;
-  border-radius: 4px;
-  border: 1px solid #cccccc;
-  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
-  color: #40505f;
+  display: flex;
+}
+
+.jumbotron .catalog-logo {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 
 .btn-primary, .btn-info {
+  color: #ffffff;
   border-color: #02828b;
   background-color: #02828b;
 }
 
 .btn-primary:hover, .btn-info:hover {
+  color: #ffffff;
+  border-color: #02828b;
+  background-color: #02828b;
+}
+
+.btn-primary:focus, .btn-info:focus{
+  color: #ffffff;
+  border-color: #02828b;
+  background-color: #02828b;
+}
+
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
+  color: #ffffff;
   border-color: #02828b;
   background-color: #02828b;
 }
@@ -70,7 +85,7 @@ h1, h2, h3 {
 
 
 .navbar-light .navbar-brand, .navbar-light .navbar-nav .nav-link{
-  color: white;
+  color: #02828b;
 }
 
 @media (min-width: 576px) {
@@ -84,11 +99,11 @@ h1, h2, h3 {
 }
 
 .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
-  color: white;
+  color: #02828b;
 }
 
 .navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover, .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-  color: white;
+  color: #02828b;
 }
 
 
