--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                 <ul class="list-unstyled">
                     <li><a class="logo" type="button" href="http://datascientia.eu/"><img
                             src="{{ site.baseurl }}/img/data-scientia-white.png"></a></li>
-                    <p class="footerAddress">Address:<br>
+                    <p class="footerAddress"><br>
                         <a href="http://knowdive.disi.unitn.it/wordpress/">Knowdive</a>, <a
                                 href="http://www.unitn.it/" target="_blank" rel="noopener noreferrer">University of
                             Trento</a>,<br>
