--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-3 footer-left">
                 <ul class="list-unstyled">
-                    <li><a class="logo" type="button" href="http://datascientia.eu/"><img
+                    <li><a class="footer-logo" type="button" href="http://datascientia.eu/"><img
                             src="{{ site.baseurl }}/img/data-scientia-white.png"></a></li>
                     <p class="footerAddress"><br>
                         <a href="http://knowdive.disi.unitn.it/wordpress/">Knowdive</a>, <a
