--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="account-masthead navbar">
+<div class="account-masthead navbar"  data-component="navigation">
   <div class="container">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item"><a class="nav-link login-link" href="#" data-hook="login-link">Login</a></li>
@@ -15,7 +15,7 @@
     </div>
   </div>
 </div>
-<nav class="navbar navbar-expand-sm mb-4 navbar-light" data-component="navigation">
+<nav class="navbar navbar-expand-sm mb-4 navbar-light">
   <div class="container">
     <a class="logo" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}{{site.logo}}"></a>
 
