bug fix: correcting filters color in dataset page

--- a/css/main.css
+++ b/css/main.css
@@ -186,7 +186,7 @@ dataset h3 {
 
 .list-group-item.active {
   z-index: 2;
-  color: #fff;
+  color: #40505f;
   /*
   background-color: #59abb3;
   border-color: #59abb3;
