links to other catalogs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,9 +18,10 @@
             </div>
             <div class="col-md-3 footer-center-left">
                 <ul class="list-unstyled">
-                    <li><a>LiveLanguage</a></li>
-                    <li><a>LiveKnowledge</a></li>
-                    <li><a>LivePeople</a></li>
+                    <li><a href="https://datascientiafoundation.github.io/LiveLanguage/">LiveLanguage</a></li>
+                    <li><a href="https://datascientiafoundation.github.io/LiveKnowledge/">LiveKnowledge</a></li>
+                    <li><a href="https://datascientiafoundation.github.io/LivePeople/">LivePeople</a></li>
+                    <li><a href="https://datascientiafoundation.github.io/LiveData/">LiveData</a></li>
                 </ul>
             </div>
             <div class="col-md-3 footer-center-right">
