--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,35 +7,43 @@
         <div class="row">
             <div class="col-md-3 footer-left">
                 <ul class="list-unstyled">
-                    <li><a class="footer-logo" type="button" href="http://datascientia.eu/"><img
+                    <li><a class="footer-logo" type="button" href="http://datascientia.disi.unitn.it/"><img
                             src="{{ site.baseurl }}/img/data-scientia-white.png"></a></li>
                     <p class="footerAddress"><br>
-                        <a href="http://knowdive.disi.unitn.it/wordpress/">Knowdive</a>, <a
+                        <a href="http://knowdive.disi.unitn.it/">Knowdive</a>, <a
                                 href="http://www.unitn.it/" target="_blank" rel="noopener noreferrer">University of
                             Trento</a>,<br>
                         38123 Povo, Trento, Italy</p>
                 </ul>
             </div>
-            <div class="col-md-3 footer-center-left">
+            <div class="col footer-center-right">
                 <ul class="list-unstyled">
+                    <li><b><p>DataScientia</p></b></li>
+                    <li><a href="https://ds.datascientia.eu/community/welcome">Community</a></li>
+                    <li><a href="https://datascientia.disi.unitn.it/education/">Education</a></li>
+                    <li><a href="https://ds.datascientia.eu/community/public/our-projects">Projects</a></li>
+                    <li><a href="https://datascientia.disi.unitn.it/partners/">Partners</a></li>
+                    <li><a href="https://ds.datascientia.eu/community/public/our-team">Team</a></li>
+                    <li><a href="https://ds.datascientia.eu/community/authentication/register">Join Us</a></li>
+                </ul>
+            </div>
+            <div class="col footer-center-right">
+                <ul class="list-unstyled">
+                    <li><b><p>Services</p></b></li>
+                    <li><a >LiveMedia</a></li>
                     <li><a href="https://datascientiafoundation.github.io/LiveLanguage/">LiveLanguage</a></li>
                     <li><a href="https://datascientiafoundation.github.io/LiveKnowledge/">LiveKnowledge</a></li>
-                    <li><a href="https://datascientiafoundation.github.io/LivePeople/">LivePeople</a></li>
                     <li><a href="https://datascientiafoundation.github.io/LiveData/">LiveData</a></li>
+                    <li><a href="https://datascientiafoundation.github.io/LivePeople/">LivePeople</a></li>
                 </ul>
             </div>
-            <div class="col-md-3 footer-center-right">
+           
+            <div class="col footer-right">
                 <ul class="list-unstyled">
-                    <li><a href="http://datascientia.eu/manifesto/">Manifesto</a></li>
-                    <li><a href="http://datascientia.eu/mission/">Mission</a></li>
-                    <li><a href="http://datascientia.eu/events/">News</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3 footer-right">
-                <ul class="list-unstyled">
-                    <li><a href="http://datascientia.eu/">Community</a></li>
-                    <li><a href="http://datascientia.eu/it/become-a-partner/">Become a Partner</a></li>
-                    <li><a href="http://datascientia.eu/contact-us/">Contact Us</a></li>
+                    <li><b><p>About Us</p></b></li>
+                    <li><a href="https://datascientia.disi.unitn.it/about-us/">Manifesto</a></li>
+                    <li><a href="https://datascientia.disi.unitn.it/news/">News</a></li>
+                    <li><a href="https://datascientia.disi.unitn.it/contact/">Contact Us</a></li>
                 </ul>
             </div>
         </div>
